--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,16 @@
 set -g default-terminal "xterm-256color"
 
 bind-key r resize-pane -R 40
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# Continuum settings
+set -g @continuum-boot 'on'
+set -g @continuum-boot-options 'iterm,fullscreen'
+set -g @continuum-restore 'on'
+
+run '~/.tmux/plugins/tpm/tpm'
