--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'seebi/tmux-colors-solarized'
 
 # Continuum settings
 set -g @continuum-boot 'on'
