--- a/.newsbeuter/config
+++ b/.newsbeuter/config
@@ -1,3 +1,6 @@
+# general
+max-items 100
+# colors
 color listfocus           black  cyan   bold
 color listfocus_unread    magenta cyan   bold
 color info                black  blue   bold
