--- a/.newsbeuter/config
+++ b/.newsbeuter/config
@@ -1,6 +1,8 @@
 # general
 max-items 100
 # colors
-color listfocus           black  cyan   bold
-color listfocus_unread    black cyan   bold
-color info                black  blue   bold
+color listnormal          color8 black
+color listnormal_unread   white  black  bold
+color listfocus           white  cyan   bold
+color listfocus_unread    white  cyan   bold
+color info                white  blue   bold
