--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -16,9 +16,9 @@ draw_bold_text_with_bright_colors: true
 font:
   # The normal (roman) font face to use.
   normal:
-    family: Hack # should be "Hack" or something on macOS.
+    family: "Noto Sans Mono CJK JP" # should be "Hack" or something on macOS.
     # Style can be specified to pick a specific face.
-    # style: Regular
+    style: Regular
 
   # The bold font face
   bold:
