--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -68,6 +68,10 @@ colors:
     cyan:    '0x54ced6'
     white:   '0x2a2a2a'
 
+visual_bell:
+  animation: EaseOutExpo
+  duration: 0
+
 key_bindings:
   - { key: V,        mods: Command, action: Paste                        }
   - { key: C,        mods: Command, action: Copy                         }
