Add tor proxy to newsbeuter config

--- a/.newsbeuter/config
+++ b/.newsbeuter/config
@@ -6,3 +6,5 @@ color listnormal_unread   color231   black  bold
 color listfocus           color16  color231
 color listfocus_unread    color16  color231   bold
 color info                color16  color231   bold
+# tor
+proxy 127.0.0.1:9150
