--- a/mpd.conf
+++ b/mpd.conf
@@ -9,3 +9,9 @@ pid_file           "~/.config/mpd/pid"
 state_file         "~/.config/mpd/state"
 sticker_file       "~/.config/mpd/sticker.sql"
 
+
+audio_output {
+	type		"alsa"
+	name		"My ALSA Device"
+	mixer_type      "software"	# optional
+}
