--- a/i3/config
+++ b/i3/config
@@ -84,7 +84,7 @@ bindsym $mod+e layout toggle split
 bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
+#bindsym $mod+space focus mode_toggle
 
 # focus the parent container
 bindsym $mod+a focus parent
@@ -151,7 +151,7 @@ bindsym $mod+r mode "resize"
 
 # colors
 # class                 border  backgr. text    indicator child_border
-client.focused          #333333 #555555 #ffffff #ff0000   #000000
+client.focused          #333333 #555555 #ffffff #ffffff   #000000
 client.focused_inactive #333333 #5f676a #ffffff #484e50   #000000
 client.unfocused        #333333 #222222 #888888 #292d2e   #222222
 client.urgent           #ff0000 #900000 #ffffff #900000   #900000
