--- a/i3/config
+++ b/i3/config
@@ -163,5 +163,5 @@ client.background       #000000
 # finds out, if available)
 bar {
         position top
-        status_command i3status
+        status_command i3status -c ~/.config/i3/i3status.conf
 }
