Update workspace colors in i3bar

--- a/i3/config
+++ b/i3/config
@@ -163,5 +163,17 @@ client.background       #000000
 # finds out, if available)
 bar {
         position top
+
+        colors {
+            background #000000
+            statusline #cccccc
+            separator #666666
+
+            focused_workspace  #666666 #444444 #cccccc
+            active_workspace   #333333 #666666 #cccccc
+            inactive_workspace #333333 #222222 #888888
+            urgent_workspace   #333333 #cccccc #333333
+        }
+
         status_command i3status -c ~/.config/i3/i3status.conf
 }
