--- a/.irssi/config
+++ b/.irssi/config
@@ -15,7 +15,6 @@ chatnets = {
     max_kicks = "1";
     max_msgs = "4";
     max_whois = "1";
-    autosendcmd = "/ignore -channels #rust,#rust-gamedev * JOINS PARTS QUITS NICKS";
   };
 };
 
@@ -287,3 +286,9 @@ settings = {
   "fe-text" = { actlist_sort = "refnum"; };
   "fe-common/core" = { theme = "design"; };
 };
+ignores = (
+  {
+    level = "JOINS PARTS QUITS NICKS";
+    channels = ( "#rust", "#rust-gamedev" );
+  }
+);
