--- a/i3/config
+++ b/i3/config
@@ -159,6 +159,9 @@ client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 
 client.background       #000000
 
+# set the x11 root window bg
+exec --no-startup-id xsetroot -solid "#333333"
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
