--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -14,12 +14,10 @@ general {
         color_good = "#888888"
 }
 
-order += "ipv6"
 order += "disk /"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "battery all"
-order += "load"
 order += "tztime local"
 
 wireless _first_ {
@@ -38,7 +36,7 @@ battery all {
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+        format = "%d-%m-%Y %H:%M:%S"
 }
 
 load {
