--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -21,13 +21,13 @@ order += "tztime local"
 
 wireless _first_ {
         format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
+        format_down = "W: -"
 }
 
 ethernet _first_ {
         # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+        format_up = "E: %ip"
+        format_down = "E: -"
 }
 
 battery all {
@@ -35,13 +35,5 @@ battery all {
 }
 
 tztime local {
-        format = "%d-%m-%Y %H:%M:%S"
-}
-
-load {
-        format = "%1min"
-}
-
-disk "/" {
-        format = "%avail"
+        format = "%d/%m/%Y %H:%M:%S"
 }
