--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -20,14 +20,13 @@ order += "battery all"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: -"
+        format_up = "W:O"
+        format_down = "W:-"
 }
 
 ethernet _first_ {
-        # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip"
-        format_down = "E: -"
+        format_up = "E:O"
+        format_down = "E:-"
 }
 
 battery all {
@@ -35,5 +34,5 @@ battery all {
 }
 
 tztime local {
-        format = "%d/%m/%Y %H:%M:%S"
+        format = "%d/%m/%Y %H:%M"
 }
