--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -20,13 +20,13 @@ order += "battery all"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = "W:O"
-        format_down = "W:-"
+        format_up = "W"
+        format_down = "W"
 }
 
 ethernet _first_ {
-        format_up = "E:O"
-        format_down = "E:-"
+        format_up = "E"
+        format_down = "E"
 }
 
 battery all {
