Add some additional ressurect config to tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 # Continuum settings
 set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
+set -g @resurrect-processes 'newsboat mpd ncmpc'
+set -g @resurrect-capture-pane-contents 'on'
 
 run '~/.tmux/plugins/tpm/tpm'
 
