--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -31,6 +31,8 @@ ethernet _first_ {
 
 battery all {
         format = "%status %percentage %remaining"
+        hide_seconds = true
+        integer_battery_capacity = true
 }
 
 tztime local {
