Update battery status to be more compact

--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -30,9 +30,13 @@ ethernet _first_ {
 }
 
 battery all {
-        format = "%status %percentage %remaining"
+        format = "[%status|%percentage|%remaining]"
         hide_seconds = true
         integer_battery_capacity = true
+        status_chr = "C"
+        status_bat = "B"
+        status_unk = "?"
+        status_full = "F"
 }
 
 tztime local {
