Show read rss feeds in newsboat/newsbeuter

--- a/.newsbeuter/config
+++ b/.newsbeuter/config
@@ -4,7 +4,7 @@ refresh-on-startup yes
 auto-reload yes
 reload-time 15
 reload-threads 4
-show-read-feeds no
+# show-read-feeds no
 browser "firefox %u"
 # colors
 color listnormal          color231  black
