--- a/i3/config
+++ b/i3/config
@@ -165,6 +165,10 @@ client.background       #111111
 # set the x11 root window bg
 exec --no-startup-id xsetroot -solid "#333333"
 
+# workspace style
+workspace_layout tabbed
+default_border pixel 5
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
