--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,16 +47,18 @@ set-window-option -g window-status-current-bg default
 set-window-option -g window-status-current-attr default
 
 # pane border
-set-option -g pane-border-fg colour235
-set-option -g pane-active-border-fg colour235
+set-option -g pane-border-fg black
+set-option -g pane-border-bg black
+set-option -g pane-active-border-fg colour240
+set-option -g pane-active-border-bg black
 
 # message text
 set-option -g message-fg colour232
-set-option -g message-bg colour32
+set-option -g message-bg colour255
 
 # pane number display
-# set-option -g display-panes-active-colour colour32
-# set-option -g display-panes-colour colour166
+set-option -g display-panes-active-colour colour252
+set-option -g display-panes-colour colour240
 
 set-option -g mode-fg colour232
 set-option -g mode-bg colour32
