--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -20,15 +20,15 @@ draw_bold_text_with_bright_colors: true
 
 font:
   normal:
-    family: 'Fira Code'
+    family: 'Hack'
 
   bold:
-    family: 'Fira Code'
+    family: 'Hack'
 
   italic:
-    family: 'Fira Code'
+    family: 'Hack'
 
-  size: 8.5
+  size: 8
 
   offset:
     x: 0.0
