--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,7 @@
 set -g default-terminal "xterm-256color"
+set -g base-index 1
 set -g pane-base-index 1
+setw -g pane-base-index 1
 
 bind-key r resize-pane -R 40
 
