--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,8 @@ setw -g pane-base-index 1
 
 bind-key r resize-pane -R 40
 
+set-option -g renumber-windows on
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
