--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -12,7 +12,7 @@ window:
     x: 5
     y: 5
 
-  decorations: false
+  decorations: none
 
 tabspaces: 8
 
@@ -31,18 +31,16 @@ font:
   size: 8
 
   offset:
-    x: 0.0
-    y: 0.0
+    x: 0
+    y: 0
 
   glyph_offset:
-    x: 0.0
-    y: 0.0
+    x: 0
+    y: 0
 
   use_thin_strokes: true
 
 render_timer: false
-
-custom_cursor_colors: true
 
 background-opacity: 0.8
 
