--- a/i3/config
+++ b/i3/config
@@ -9,11 +9,15 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
+# Key map stuff
+exec setxkbmap -layout gb, us
+exec setxkbmap -option 'grp:ctrl_alt_toggle'
+
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Fira Code 8.5
+font pango:Hack 8.5
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -125,6 +129,9 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 # i3lock
 bindsym $mod+p exec i3lock -u -c 000000
+# remove border
+bindsym $mod+b border toggle
+
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -167,7 +174,7 @@ exec --no-startup-id xsetroot -solid "#333333"
 
 # workspace style
 workspace_layout tabbed
-default_border pixel 5
+# default_border pixel 5
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
