--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,42 +27,29 @@ run '~/.tmux/plugins/tpm/tpm'
 # (from https://github.com/adrianolaru/adio-theme)
 
 # default statusbar colors
-set-option -g status-fg colour250
-set-option -g status-bg colour234
-set-option -g status-attr default
+set-option -g status-style fg=colour250,bg=colour234,default
 
 # default left statusbar colors
-set-option -g status-left-fg colour250
-set-option -g status-left-bg default
-set-option -g status-left-attr default
+set-option -g status-left-style fg=colour250,bg=default,default
 
 # default right statusbar colors
-set-option -g status-right-fg colour240
-set-option -g status-right-bg default
-set-option -g status-right-attr default
+set-option -g status-right-style fg=colour240,bg=default,default
 
 # default window title colors
-set-window-option -g window-status-fg colour240
-set-window-option -g window-status-bg default
+set-window-option -g window-status-style fg=colour240,bg=default,default
 
 # active window title colors
-set-window-option -g window-status-current-fg colour252
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr default
+set-window-option -g window-status-current-style fg=colour252,bg=default,default
 
 # pane border
-set-option -g pane-border-fg black
-set-option -g pane-border-bg black
-set-option -g pane-active-border-fg colour240
-set-option -g pane-active-border-bg black
+set-option -g pane-border-style fg black,bg=black
+set-option -g pane-active-border-style fg=colour240,bg=black
 
 # message text
-set-option -g message-fg colour232
-set-option -g message-bg colour255
+set-option -g message-style fg=colour232,bg=colour255
 
 # pane number display
 set-option -g display-panes-active-colour colour252
 set-option -g display-panes-colour colour240
 
-set-option -g mode-fg colour232
-set-option -g mode-bg colour32
+set-option -g mode-style fg=colour232,bg=colour32
