--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,19 +30,19 @@ run '~/.tmux/plugins/tpm/tpm'
 set-option -g status-style fg=colour250,bg=colour234,default
 
 # default left statusbar colors
-set-option -g status-left-style fg=colour250,bg=default,default
+set-option -g status-left-style fg=colour250
 
 # default right statusbar colors
-set-option -g status-right-style fg=colour240,bg=default,default
+set-option -g status-right-style fg=colour240
 
 # default window title colors
-set-window-option -g window-status-style fg=colour240,bg=default,default
+set-window-option -g window-status-style fg=colour240
 
 # active window title colors
-set-window-option -g window-status-current-style fg=colour252,bg=default,default
+set-window-option -g window-status-current-style fg=colour252
 
 # pane border
-set-option -g pane-border-style fg black,bg=black
+set-option -g pane-border-style fg=black,bg=black
 set-option -g pane-active-border-style fg=colour240,bg=black
 
 # message text
