--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,7 @@ set -g default-terminal "tmux-256color"
 set -g base-index 1
 set -g pane-base-index 1
 setw -g pane-base-index 1
+set -g status-right '#{battery_icon} #{battery_percentage} | %w %d.%m.%y %H:%M '
 
 bind-key r resize-pane -R 40
 
@@ -13,6 +14,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-battery'
 
 # Continuum settings
 set -g @continuum-boot 'on'
