Add useful status things to tmux bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,9 @@ set -g default-terminal "tmux-256color"
 set -g base-index 1
 set -g pane-base-index 1
 setw -g pane-base-index 1
-set -g status-right '#{battery_icon} #{battery_percentage} | %w %d.%m.%y %H:%M '
+set -g @online_icon "[1]"
+set -g @offline_icon "[0]"
+set -g status-right '#{battery_icon} #{battery_percentage} | #{online_status} | %w %d.%m.%y %H:%M '
 
 bind-key r resize-pane -R 40
 
@@ -15,6 +17,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-online-status'
 
 # Continuum settings
 set -g @continuum-boot 'on'
