Use PWD for new tmux panes and windows

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,9 @@ set -g @offline_icon "[0]"
 set -g status-right '#{battery_icon} #{battery_percentage} | #{online_status} | %w %d.%m.%y %H:%M '
 
 bind-key r resize-pane -R 40
+bind '%' split-window -h -c '#{pane_current_path}'  # Split panes horizontal
+bind '"' split-window -v -c '#{pane_current_path}'  # Split panes vertically
+bind c new-window -c '#{pane_current_path}' # Create new window
 
 set-option -g renumber-windows on
 
