--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -66,7 +66,7 @@ colors:
 selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>"
 
-visual_bell:
+bell:
   animation: EaseOutExpo
   duration: 0
 
