Update tmux resurrect programs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,7 +25,7 @@ set -g @plugin 'tmux-plugins/tmux-online-status'
 # Continuum settings
 set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
-set -g @resurrect-processes 'newsboat mpd ncmpc'
+set -g @resurrect-processes 'newsboat cmus irssi'
 set -g @resurrect-capture-pane-contents 'on'
 
 run '~/.tmux/plugins/tpm/tpm'
