--- a/.newsbeuter/config
+++ b/.newsbeuter/config
@@ -5,7 +5,7 @@ refresh-on-startup yes
 # reload-time 15
 reload-threads 4
 # show-read-feeds no
-browser "qutebrowser %u"
+browser "firefox %u"
 # colors
 color listnormal          color231  black
 color listnormal_unread   color231   black  bold
