--- a/.irssi/config
+++ b/.irssi/config
@@ -1,7 +1,7 @@
 servers = (
   {
-    address = "chat.freenode.net";
-    chatnet = "Freenode";
+    address = "irc.esper.net";
+    chatnet = "Esper";
     port = "6697";
     use_tls = "yes";
     tls_verify = "yes";
@@ -10,7 +10,7 @@ servers = (
 );
 
 chatnets = {
-  Freenode = {
+  Esper = {
     type = "IRC";
     max_kicks = "1";
     max_msgs = "4";
@@ -19,7 +19,7 @@ chatnets = {
 };
 
 channels = (
-  { name = "#merveilles"; chatnet = "Freenode"; autojoin = "Yes"; }
+  { name = "#merveilles"; chatnet = "Esper"; autojoin = "Yes"; }
 );
 
 aliases = {
@@ -288,6 +288,6 @@ settings = {
 ignores = (
   {
     level = "JOINS PARTS QUITS NICKS";
-    channels = ( "#rust", "#rust-gamedev" );
+    channels = ( "#merveilles" );
   }
 );
