better battery status

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@ set -g pane-base-index 1
 setw -g pane-base-index 1
 set -g @online_icon "[1]"
 set -g @offline_icon "[0]"
-set -g status-right '#{battery_icon} #{battery_percentage} | #{online_status} | %w %d.%m.%y %H:%M '
+set -g status-right '#{battery_icon} #{battery_color_charge_fg}#{battery_percentage}#[default] | #{online_status} | %w %d.%m.%y %H:%M '
 
 bind-key r resize-pane -R 40
 bind '%' split-window -h -c '#{pane_current_path}'  # Split panes horizontal
@@ -25,8 +25,15 @@ set -g @plugin 'tmux-plugins/tmux-online-status'
 # Continuum settings
 set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
-set -g @resurrect-processes 'newsboat cmus irssi'
+set -g @resurrect-processes 'newsboat cmus irssi watch tut'
 set -g @resurrect-capture-pane-contents 'on'
+
+# Battery settings
+set -g @batt_color_charge_primary_tier8 'colour240'
+set -g @batt_color_charge_primary_tier7 'colour240'
+set -g @batt_color_charge_primary_tier6 'colour240'
+set -g @batt_color_charge_primary_tier5 'colour240'
+set -g @batt_color_charge_primary_tier4 'colour240'
 
 run '~/.tmux/plugins/tpm/tpm'
 
